0.3.2
Selecting a tab from the menu now centres the current line.
Underscores in function/bookmark menu now shown properly.
Scroll current line on screen works better.
Adjusing tabs size now doesn't reguire restart.
Added notebook tab size adjustment to prefs.
Added extra debian instructions for gtk 3 in INSTALL ( thanks to Sadi for that ).
Squeezed tabs in gtk3.
Fixed setting font properly in gtk 3.
Added regex error message if badly formed regex search expression.
First run of gtk3 version now imports most settings from gtk2 version ( or vice versa ).
Changed 'Go To Define' toolbar icon.

0.3.1
Code clean.
Fixed revert.
First gtk3 enabled release.

0.3.0
Fixed saving window on exit for gtk3.
Fixed 'Open XTerm Here' script.
Fixed tag highlight all tag colours.
Done gtk3 colur select buttons etc.
Fixed gtk3 signals being mucked about with.
Fixed Regex search again!
Fixed empty shortcut key in external tools.
More gtk3 widget label nonsense.
Holding 'SHIFT' key when selecting 'Select Tab' from menu now moves the selected tab next to the current tab and selects it.
Tweaked tools install to reflect appname suffix.
Redone .desktop files.
Redone prefs toolbar customize.
Tweaked set menus/toolbar items sensitive.
Find higlighting now stays until a new find or switching tabs.
Fixed makefile uninstall.
Done code completion.
Launches correct version of pprgressbar.
Launches correct version (gtk2/3) from menu's new editor/new root editor.
Auto appends "-3" to name of executable's when installing for gtk3.
Removed split document view options.
Done bookmarks.
Fixed minor bug not scrolling to line when jumping to function in file that needs to be opened.
Redone 'Go Back'.
Moved some routines to widget callbacks.
Redone setting menus/toolbar items sensitive.
Fixed some memory leaks when closing tabs.
Fixed jump to line entry box size.
Fixed occasional segfault on quiting when certain plugins enabled.
Added update-icons target to top Makefile.