@@ -21,7 +21,7 @@
 #ifndef _GUIS_
 #define _GUIS_
 
-enum	{AUTOINDENT=0,SHOWNUMS,WRAP,HIGHLIGHT,NOSYNTAX,USESINGLE,AUTOSAVE,AUTOBM,NODUPLICATE,NOWARN,READLINK,AUTOSHOW,UPDATECHECK,BEKIND,GLOBALPLUGMENU,MAXPREFSWIDGETS};
+enum	{AUTOINDENT=0,SHOWNUMS,WRAP,HIGHLIGHT,NOSYNTAX,USESINGLE,AUTOSAVE,AUTOBM,NODUPLICATE,NOWARN,READLINK,AUTOSHOW,UPDATECHECK,BEKIND,GLOBALPLUGMENU,AUTOSEARCH,MAXPREFSWIDGETS};
 enum {MAXTABCHARS=0,MAXHISTORY,MAXFUNCDEPTH,COMPLETIONSIZE,TABWIDTH,MENUWIDTH,MAXBMWIDTH,NOTETABSSIZE,MAXPREFSINTWIDGETS};
 
 extern	GtkWidget	*prefsWidgets[MAXPREFSWIDGETS];
