@@ -21,14 +21,14 @@ void doFindReplace(GtkDialog *dialog,gint response_id,gpointer user_data);
 void find(GtkWidget *widget,gpointer data);
 void doSearchPrefs(GtkWidget *widget,gpointer data);
 void docSearchFromBar(GtkWidget *widget,gpointer data);
-void defSearchFromBar(GtkWidget *widget,gpointer data);
+bool defSearchFromBar(GtkWidget *widget,gpointer data);
 void doLiveSearch(GtkWidget *widget,GdkEvent *event,gpointer data);
 void basicFind(int dowhat);
 void regexFind(int dowhat);
-void searchQT5Docs(GtkWidget *widget,gpointer data);
+bool searchQT5Docs(GtkWidget *widget,gpointer data);
 void searchQT5Assist(GtkWidget *widget,gpointer data);
 void qt5DocSearchFromBar(GtkWidget *widget,gpointer data);
-void searchGtkDocs(GtkWidget *widget,gpointer data);
+bool searchGtkDocs(GtkWidget *widget,gpointer data);
 void showDocView(int howtodisplay,char *text,const char *title);
 void pasteFRClip(GtkWidget *widget,gpointer data);
 void doDoxy(GtkWidget *widget,long data);
